# ModelLab

./: .gitignore  Dockerfile  FEATURE_GUIDE.md  IMPLEMENTATION_SUMMARY.md  README.md  SETUP.md  backend_notes.md  chocolate.csv  delete_route_snippet.py  docker-compose.yml  run_dev.bat  sample_data.csv  test_backend.py  verify_env.bat
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: explanation_routes.py  routes.py
backend/app/core/: config.py  exceptions.py  explanation_schemas.py  model_factory.py  model_interface.py  preprocessing_schemas.py  registry.py  schemas.py
backend/app/plugins/: base.py
backend/app/plugins/ebm/: plugin.py
backend/app/plugins/mgcv/: plugin.py
backend/app/plugins/models/: __init__.py  ebm_plugin.py  lightgbm_plugin.py  mgcv_plugin.py
backend/app/services/: data_service.py  explanation_service.py  preprocessing_service.py  run_service.py  training_service.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/components/: DynamicForm.tsx  GAMConfig.tsx  QueryProvider.tsx
frontend/app/components/dashboard/: ActualVsPredicted.tsx  ActualVsPredictedPlot.tsx  ConfusionMatrix.tsx  FeatureImportanceChart.tsx  ICEPlot.tsx  MetricsCards.tsx  PerClassMetricsChart.tsx  ResidualHistogram.tsx  ResidualPlot.tsx  ShapePlot.tsx  WaterfallChart.tsx  WhatIfSimulator.tsx  index.ts
frontend/app/datasets/: page.tsx
frontend/app/datasets/[id]/: page.tsx
frontend/app/lib/: api.ts  explanationApi.ts
frontend/app/models/: page.tsx
(+2 files in other folders)
